# bdr-api-tools

./: PLAN__.md  PLAN__display_recent_activity.md  PLAN__make_counts_tool.md  README.md  calc_collection_size.py  display_collection_activity.py  display_recent_activity.py  feature_request.md  find_extracted_text_collections.py  gather_extracted_text.py  index.md  list_named_entities.py  plan.md  plan_for_class_refactor.md  pyproject.toml  show_zip_info.py  temp_benchmark_make_uniques.py
tests/: readme_tests.md  test_calc_collection_size.py  test_collection_title.py  test_display_collection_activity.py  test_display_recent_activity.py  test_gather_extracted_text.py  test_list_named_entities.py  test_show_zip_info.py
tests/test_data/: collection_data_bdr-bfttpwkj.json
