[project]
name = "bdr-api-tools"
version = "0.0.0"
description = "Scripts for interacting with the Brown Digital Repository API."
readme = ""
requires-python = ">=3.12,<3.13"
dependencies = ["httpx", "humanize", "tqdm"]

[dependency-groups]
local = []
staging = []
prod = []

[tool.birkin_project_guidelines]
llm_code_directives = [
  "use python-3.12 type-hints everywhere for functions and variables; avoid unnecessary `typing` imports via using generics",
  "structure scripts with `if __name__ == '__main__': main()`",
  "keep main() as simple as possible; delegate to helper functions",
  "for tests, use standard unittest framework, not pytest",
  "to run tests, always use `uv`; example: `uv run -m unittest discover -v`",
  "use httpx for all HTTP calls",
  "don't use functions within functions",
  "prefer single-return functions",
  "use present-tense triple-quoted function docstrings -- example: """\nParses... (not Parse...)\n"""
]
